@@ -1,3 +1,5 @@
 Maxim Stepin - Creator of hqx filter
 
 Cameron Zemek - Package maintainer. Added 24bit color support.
+
+Francois Gannaz - Added transparency support.
